将css 引用改为CDN

--- a/fonturl.less
+++ b/fonturl.less
@@ -19,7 +19,8 @@
 .MJXc-TeX-size3-R {font-family: MJXc-TeX-size3-R,MJXc-TeX-size3-Rw}
 .MJXc-TeX-size4-R {font-family: MJXc-TeX-size4-R,MJXc-TeX-size4-Rw}
 
-@fonturl: '../mathjax/';
+//@fonturl: '../mathjax/';
+@fonturl: 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/';
 
 @font-face {font-family: MJXc-TeX-ams-R; src: local('MathJax_AMS'), local('MathJax_AMS-Regular')}
 @font-face {font-family: MJXc-TeX-ams-Rw; src /*1*/: url('@{fonturl}fonts/HTML-CSS/TeX/eot/MathJax_AMS-Regular.eot'); src /*2*/: url('@{fonturl}fonts/HTML-CSS/TeX/woff/MathJax_AMS-Regular.woff') format('woff'), url('@{fonturl}fonts/HTML-CSS/TeX/otf/MathJax_AMS-Regular.otf') format('opentype')}
