--- a/styles/kmath.css
+++ b/styles/kmath.css
@@ -10,8 +10,8 @@
 
  /* Symbol */
 #math-symbol{ 
-    display: flex; flex-wrap: wrap; align-items: flex-start; 
-    /* height: 142px; */ 
+    display: flex; flex-wrap: wrap; align-items: flex-start;  align-content: flex-start;
+     height: 142px;  
     padding: 5px 5px 0; margin: 0; 
     border: 1px solid #dbdbdb; border-top-color: #5FB554; box-sizing: border-box;}
 #math-symbol>li{ 
@@ -23,7 +23,7 @@
 }
 
 /* Edit Area */
-#advance-editarea{ display: block; overflow: auto; width: 99%; margin: 0 auto; height: 120px; }
+#advance-editarea{ display: block; overflow: auto; width: 98%; margin: 0 auto; height: 120px; }
 #advance-view{ margin: 0 auto; height: 130px; }
 #basic-editarea{ clear: both; display: block; width: 99%; margin: 0 auto; height: 266px;}
 
