--- a/styles/kmath.css
+++ b/styles/kmath.css
@@ -21,9 +21,9 @@
     color: #008ee6; 
     border:1px solid #dbdbdb; cursor: pointer; box-sizing: border-box;
 }
-#math-symbol>li * {
+/*#math-symbol>li * {
     font-family: Symbola, "Times New Roman", serif!important;
-}
+}*/
 
 /* Edit Area */
 #advance-editarea{ display: block; overflow: auto; width: 98%; margin: 0 auto; height: 120px; }
