--- a/styles/kmath.css
+++ b/styles/kmath.css
@@ -6,6 +6,8 @@
 .customMatrixTable td{ height: 20px; width: 20px; border-top: 1px solid #eee; border-left: 1px solid #eee; cursor: pointer;}
 .customMatrixTable td.on{ background: darkgray;}
 
+ .icon{ display: block; height: 100%; width: 100%; background: rgba(255, 165, 0, 0.25); line-height: 0;} 
+
 .math-insert.button, .math-cancel.button{ float: right; margin-top: 20px; margin-left: 15px; box-sizing: border-box;}
 #kmath,[data-role="kmath"]{ padding: 0 5px 6px; max-width: 900px; min-width: 720px; font-family: "Times New Roman", serif; border: 1px solid #ccc;}
 /* Category */
@@ -22,6 +24,7 @@
     padding: 5px 5px 0; margin: 0; 
     border: 1px solid #dbdbdb; border-top-color: #5FB554; box-sizing: border-box;}
 .math-symbol>li{ 
+    list-style: none;
     padding: 0; overflow: hidden;
     margin-left: -1px; margin-bottom: 5px; height: 40px; width: 40px; 
     line-height: 35px; text-align: center; 
@@ -57,7 +60,7 @@
 }
 .basic-editarea{ clear: both; display: block; width: 99%; margin: 0 auto; height: 267px;}
 
-.kmath-message{ position: absolute; bottom: 0.1em; left: 0.5em; font-size: 0.9em;}
+.kmath-message{ position: absolute; bottom: 0.1em; left: 0.5em; font-size: 0.9em; font-family: Verdana;}
 /*height: 1.5em; line-height: 1.5em; padding-left: 5px; */
 .blue-link{ margin: 10px 0; float: right; border: none; background: none; color: #3a9be5; cursor: pointer;}
 .blue-link:hover{ text-decoration: underline;}
