--- a/styles/kmath.css
+++ b/styles/kmath.css
@@ -6,8 +6,6 @@
 .customMatrixTable td{ height: 20px; width: 20px; border-top: 1px solid #eee; border-left: 1px solid #eee; cursor: pointer;}
 .customMatrixTable td.on{ background: darkgray;}
 
- .icon{ display: block; height: 100%; width: 100%; background: rgba(255, 165, 0, 0.25); line-height: 0;} 
-
 .math-insert.button, .math-cancel.button{ float: right; margin-top: 20px; margin-left: 15px; box-sizing: border-box;}
 #kmath,[data-role="kmath"]{ padding: 0 5px 6px; max-width: 900px; min-width: 720px; font-family: "Times New Roman", serif; border: 1px solid #ccc;}
 /* Category */
@@ -31,6 +29,7 @@
     /*color: #008ee6; */ color: #000;
     border:1px solid #dbdbdb; cursor: pointer; box-sizing: border-box;
 }
+.math-symbol>li.directDisplay{ font-size: 2em; padding-top: 4px;}
 /*.math-symbol>li * {
     font-family: Symbola, "Times New Roman", serif!important;
 }*/
@@ -68,6 +67,107 @@
 /* rewrite Math Symbols styles */
 .math-symbol .mq-empty{ display: none!important;}
 .math-symbol big{ font-size: 1.3em!important;}
+
+.kmath-contextmenu{ font-family: Verdana; font-size: 0.9em; position: absolute; margin: 0; padding: 0; list-style: none; background: #fff; border: 1px solid #ccc; z-index: 999999;}
+.kmath-contextmenu li{ padding: 0 10px; line-height: 2.5; cursor: pointer;}
+.kmath-contextmenu li:hover{ background: #eee; }
+
+/* font */
+@font-face {
+  font-family: 'font-kmath';
+  src:  url('../fonts/font-kmath.eot?s5cxrr');
+  src:  url('../fonts/font-kmath.eot?s5cxrr#iefix') format('embedded-opentype'),
+    url('../fonts/font-kmath.ttf?s5cxrr') format('truetype'),
+    url('../fonts/font-kmath.woff?s5cxrr') format('woff'),
+    url('../fonts/font-kmath.svg?s5cxrr#fi-kmath-') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="fi-kmath-"], [class*=" fi-kmath-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'font-kmath' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.fi-kmath-bb-matrix-a:before {
+  content: "\e900";
+}
+.fi-kmath-bigcap-a:before {
+  content: "\e901";
+}
+.fi-kmath-bigcap-sub-a:before {
+  content: "\e902";
+}
+.fi-kmath-bigcap-sub-sup-a:before {
+  content: "\e903";
+}
+.fi-kmath-bigcup-a:before {
+  content: "\e904";
+}
+.fi-kmath-bigcup-sub-a:before {
+  content: "\e905";
+}
+.fi-kmath-bigcup-sub-sup-a:before {
+  content: "\e906";
+}
+.fi-kmath-b-matrix-a:before {
+  content: "\e907";
+}
+.fi-kmath-brace-a:before {
+  content: "\e908";
+}
+.fi-kmath-co-prod-a:before {
+  content: "\e909";
+}
+.fi-kmath-matrix-a:before {
+  content: "\e90a";
+}
+.fi-kmath-oint-a:before {
+  content: "\e90b";
+}
+.fi-kmath-oint-sub-a:before {
+  content: "\e90c";
+}
+.fi-kmath-over-left-arrow-a:before {
+  content: "\e90d";
+}
+.fi-kmath-over-line-a:before {
+  content: "\e90e";
+}
+.fi-kmath-over-right-arrow-a:before {
+  content: "\e90f";
+}
+.fi-kmath-p-matrix-a:before {
+  content: "\e910";
+}
+.fi-kmath-prod-a:before {
+  content: "\e911";
+}
+.fi-kmath-small-matrix-a:before {
+  content: "\e912";
+}
+.fi-kmath-sub-circ-a:before {
+  content: "\e913";
+}
+.fi-kmath-sum-a:before {
+  content: "\e914";
+}
+.fi-kmath-v-matrix-a:before {
+  content: "\e915";
+}
+.fi-kmath-vv-matrix-a:before {
+  content: "\e916";
+}
 
 
 /*mathjax*/
