--- a/styles/kmath.css
+++ b/styles/kmath.css
@@ -57,7 +57,7 @@
 	border:2px solid #fff;
 	background-color:rgba(0,0,0,.3)
 }
-.basic-editarea{ clear: both; display: block; width: 99%; margin: 0 auto; height: 267px;}
+.basic-editarea{ clear: both; overflow: auto; display: block; width: 99%; margin: 0 auto; height: 267px;}
 
 .kmath-message{ position: absolute; bottom: 0.1em; left: 0.5em; font-size: 0.9em; font-family: Verdana;}
 /*height: 1.5em; line-height: 1.5em; padding-left: 5px; */
@@ -69,7 +69,7 @@
 .math-symbol big{ font-size: 1.3em!important;}
 
 .kmath-contextmenu{ font-family: Verdana; font-size: 13px; position: absolute; margin: 0; padding: 0; 
-  user-select: none; -moz-user-select: none; -ms-user-select: none; -webkit-user-select: none;
+  /* user-select: none; -moz-user-select: none; -ms-user-select: none; -webkit-user-select: none; */
   list-style: none; background: #fff; border: 1px solid #ccc; z-index: 999999;}
 .kmath-contextmenu li{ padding: 0 13px; line-height: 40px; cursor: pointer;}
 .kmath-contextmenu li:hover{ background: #eefbee; }
