--- a/styles/kmath.css
+++ b/styles/kmath.css
@@ -1,7 +1,7 @@
 
 .kmath-select {
   position: relative;
-  z-index: 0;
+  z-index: 999;
   margin: 4px 0 0 5px;
   max-width: 160px;
 }
@@ -14,8 +14,10 @@
   top: 100%;
   width: 100%;
   left: 0;
+  background: #fff; 
   border: 1px solid #ccc;
-  z-index: 99999;
+  max-height: 150px;
+  overflow: auto;
 }
 .open .kmath-select-menu {
   display: inline-block;
@@ -45,10 +47,10 @@
 }
 .kmath-select-div:after {
   content: "";
-  border-width: 5px;
+  border-top-width: 5px;
   border-bottom-width: 0px;
   border-color: transparent;
-  border-top-color: #000;
+  border-top-color: #232323;
   border-style: solid;
   position: absolute;
   top: 13px;
@@ -58,7 +60,6 @@
 .none {
   display: none;
 }
-
 
 .customMatrix{ position: absolute; display: inline-block; min-width:230px; padding: 5px; background: #fff; border: 1px solid #9c9a9a; border-radius: 6px; z-index: 99999; font-family: Segoe UI;}
 .customMatrix .title{float: left; padding-bottom: 2px;}
