Fixed bug of IE

--- a/styles/kmath.css
+++ b/styles/kmath.css
@@ -40,6 +40,7 @@
   background-color: transparent;
   width: 100%;
   line-height: 2;
+  height: 2em;
   padding: 0 6px;
   cursor: default;
   box-sizing: border-box!important;
